# dolus

./: .env  Makefile  docker-compose.yaml  netflify.sh
dolus-web/: Cargo.toml  package.json
dolus-web/app/: package-lock.json  package.json  rollup.config.js
dolus-web/app/public/: index.html
dolus-web/app/src/: App.svelte  Chart.svelte  Header.svelte  Histogram.svelte  charts.js  main.js
dolus-web/components/: WordChart.js
dolus-web/js/: index.js
dolus-web/pages/: index.js
dolus-web/painter/: Cargo.toml
dolus-web/painter/src/: lib.rs  painter.rs
dolus-web/painter/src/painter/: charts.rs  histogram.rs  mod.rs
dolus-web/src/: lib.rs
dolus-web/static/: index.html  styles.css
dolus-web/styles/: Charts.module.css  Home.module.css
migrations/2020-10-04-111539_init_crawled/: down.sql  up.sql
scraper/: .dockerignore  .gitignore  README.md  dockerfile  requirements.txt  run.sh  scrapy.cfg  words.json  words.txt
scraper/news_indices/: items.py  middlewares.py  pipelines.py  settings.py
scraper/news_indices/spiders/: news_indices.py  newsflash.py
scraper/onrab/: items.py  middlewares.py  pipelines.py  settings.py
scraper/onrab/spiders/: onrab.py
web/: Cargo.toml  build.sh  dockerfile  dockerfile-release  release.sh
web/migrations/2020-10-04-163507_add_top_words_col/: down.sql  up.sql
web/migrations/2020-10-29-115514_archive-current/: up.sql
web/migrations/2020-10-29-122122_restore-archive/: down.sql  up.sql
web/migrations/2020-11-17-145559_indices/: down.sql  up.sql
web/src/: index.html  main.rs
