# You must change these to your own details.
[package]
name = "dolus-painter"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = true

[features]

# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]
[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4" }
plotters = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.22"
plotters-canvas = "0.3"
console_error_panic_hook = "0.1.5"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window'
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys"]


# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
